[tool.poetry]
name = "tests-runner"
version = "0.1.0"
description = ""
authors = ["Adamozo <naworsk.adam@gmail.com>"]
readme = "README.md"
packages = [{include = "tests_runner"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
